Provide better feedback for successful user registration
Squashed commit of the following:

commit 0bda1e22b935940106d6915aca8f2c7d47849d2d
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 04:20:22 2020 +0100

    found it

commit 801fc6bf2975559c2e7561e334a8d9572134cb1f
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 03:56:40 2020 +0100

    erg

commit 7ec8022e5046986d9c209cfa9b480c33a7343a73
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 03:21:07 2020 +0100

    fty

commit 84e6a1c38be4843c376daee1cf36848d53c6366a
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 03:15:01 2020 +0100

    hnh

commit e2a75a82fea348f40a9c9c52a38e2c14ba56ef4d
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 03:09:30 2020 +0100

    redistribute frontend

commit 7fe037d7d39a653befef104fdc569db816ab4632
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 02:37:03 2020 +0100

    alkjdfs

commit 998eb5d3ba7ef9dbad6309ae51949f2336dd7fad
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 02:34:02 2020 +0100

    mumble mumble

commit 0430addba841b1ec39e5535a2cf4f74ae1f93ece
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 02:27:50 2020 +0100

    there was a typo

commit f1528e97c6bb483ab9ac8664507013f526ebd9ff
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 02:23:34 2020 +0100

    move email success cheking to frontend

commit 1c19eb4e8b6503d4d1c187d48fce91738900b05f
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 01:56:33 2020 +0100

    fix success message format (?)

commit 8c2ec654806f4e22e7da3fc71dabdc39a69414f4
Author: theunbound <the.bentusi@gmail.com>
Date:   Thu Feb 20 01:36:24 2020 +0100

    more user-friendly registration

--- a/app/views/user/register.pug
+++ b/app/views/user/register.pug
@@ -52,14 +52,11 @@ block content
 										.actions
 											button.btn-primary.btn(
 												type='submit',
-												ng-disabled="registerUnauthFrom.inflight || regusterUnauthForm.email.$error.required"
+												ng-disabled="registerUnauthFrom.inflight || registerUnauthForm.email.$error.required"
 												)
 												span(ng-show='!registerUnauthForm.inflight') Send
 												span(ng-show='registerUnauthForm.inflight') Sender...
 							form-messages(for="registerUnauthForm")
-								.alert.alert-danger(ng-show="regusterUnauthForm.response.error")
-									| 
-									| doot doot
 						h2 Andre email-adresser
 						p
 							| Skriv til en administrator:
