--- a/app/views/user/register.pug
+++ b/app/views/user/register.pug
@@ -32,6 +32,7 @@ block content
 							name="registerUnauthForm",
 							action="/register"
 							method="POST",
+							onsuccess="function(res) {document.getElementById('mail-placeholder').textContent = res.data.email;}"
 							ng-cloak
 							)
 							input(type="hidden", name="_csrf", value=csrfToken)
@@ -57,6 +58,14 @@ block content
 												span(ng-show='!registerUnauthForm.inflight') Send
 												span(ng-show='registerUnauthForm.inflight') Sender...
 							form-messages(for="registerUnauthForm")
+								div(
+									class="alert success", 
+									ng-show="!registerUnauthForm.infligth && form.response.success"
+									)
+									| En registrerings–mail er sendt til 
+									|
+									span(id="mail-placeholder")
+									| .
 						h2 Andre email-adresser
 						p
 							| Skriv til en administrator:
